--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
+    "cities[7]['City'] = P\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
